tests/fixtures/TypeConversionFunctionTests/errors/int8_no_argument.fg
/; EXPECT_ERROR: FunctionArgumentCountMismatch
print(Int8())

